# crpt-test-assignment-2

./: .gitignore  README.md  process_document.py  pyproject.toml  setup.cfg  test_task_generator.py
src/: config.py  database.py  main.py  process_document.py  task_doc_procces.py  task_generator.py
